--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+node_modules
+
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+pnpm-lock.yml
+
+
 # Logs
 logs
 *.log
@@ -22,3 +30,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
