--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/react-scroll": "^1.8.3",
