--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/react-icons": "^3.0.0",
     "@types/react-scroll": "^1.8.3",
     "@types/swiper": "^6.0.0",
     "framer-motion": "^6",
